--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -1,3 +1,10 @@
+.loader_container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .loader {
   transform: rotateZ(45deg);
   perspective: 1000px;
@@ -6,7 +13,6 @@
   height: 480px;
   color: #000000;
   display: flex;
-  margin: auto;
 }
   .loader:before,
   .loader:after {
